<resources>
    <string name="app_name">sendismapp</string>
    <!-- String Johan -->
    /*Cadenas para la vista de Crear ruta*/
    <string name="Img">Esto es una imagen</string>
    <string name="txtFrecuencia">Frecuencia en toma de datos</string>
    <string name="txtMarcadores">Marcadores</string>
    <string name="edtText">Pon un nombre a tu ruta! :)</string>
    <string name="txtVherramientasEdicion">Edición de puntos de interés</string>
    <string name="popUpTitulo">Como debe usar los marcadores</string>
    <string name="popUpInfoFinalTitulo">Felicidades, terminaste la ruta</string>
    <string name="popUpInfoFinalTitulo2">Ahora eres libre de calificarla</string>
    <string name="popUpInfoFinalTitulo3"> O de comentarla, si lo deseas, desde tú historial de rutas recorridas</string>
    <string name="expIconoCaminante">Use este icono para marcar un punto en el recorrido que sea difícil de transitar</string>
    <string name="expIconoAgua">Use este icono para marcar un punto en el recorrido que sea ideal para rehidratarse</string>
    <string name="expIconoFoto">Use este icono para marcar un punto en el recorrido que sea ideal para tomar una fotografía</string>
    <string name="expIconoCamara">Use este icono para activar la cámara y tomar una foto relacionada con el punto de interés</string>
    <string name="expIconoBateria">Use este icono para marcar un punto en el recorrido que sea ideal para recuperar energía</string>
    <string name="username_es">Nombre de ususario</string>
    <string name="create_new_route">Crear nueva ruta</string>
    <string name="travel_route">Recorrer una ruta</string>
    <string name="view_on_maps">Ver en google maps</string>
    <string name="name_es">Nombre</string>
    <string name="example_interest_description">esta es la descripcion de un lugar de interes. la descripcion dice algo sobre el lugar y es interesante</string>
    <string name="weight_es">Peso:</string>
    <string name="experience_es">Experiencia</string>
    <string name="age_es">Edad</string>
    <string name="apply_es">Aplicar</string>
    <string name="change_password_es">Cambiar clave</string>
    <string name="distance_es">Distancia</string>
    <string name="difficulty_es">Dificultad</string>
    <string name="route_es">Ruta</string>
    <string-array name="distancias">
        <item>1 m</item>
        <item>2 m</item>
        <item>3 m</item>
        <item>4 m</item>
        <item>5 m</item>
        <item>6 m</item>
    </string-array>

    /*Codenas para la vista de Editar Ruta*/
    <string name="btnGuardar">Guardar</string>
    <string name="btnCancelar">Cancelar</string>

    /*Cadenas para la vista de Registrarse*/
    <string name="btnLogin">LOGIN</string>
    <string name="btnRegis">REGISTRARSE</string>
    <string name="tfCorreo">Correo</string>
    <string name="tfPassword">Contraseña</string>
    <string name="btnIngresar">Ingresar</string>
    <string name="txtFNombre">Nombre</string>
    <string name="txtFPassword">Contraseña</string>
    <string name="txtFPassword2">Repetir Contraseña</string>
    <string name="txtFdate">03/03/20</string>
    <string name="txtVExperiencia">Experiencia en actividades de senderismo: </string>
    <string name="btnResgistrarse">Registrarse</string>
    <string name="txtVFotoPerfil">Presiona para guardar foto de perfil</string>
    <string name="edtPeso">Peso (Kg)</string>
    <string name="edtAltura">Altura (Cm)</string>
    <string name="edtEdad">Edad</string>
    <string-array name="Esperiencias">
        <item>Principiante</item>
        <item>Aficionado</item>
        <item>Experimentado</item>
    </string-array>
    <!-- =========== -->

    <!-- String Diego -->
    <string name="tvEligeDificultad">¿Cómo te pareció esta ruta?</string>
    <string name="rbFacil">Fácil</string>
    <string name="rbMedio">Medio</string>
    <string name="rbDificil">Difícil</string>
    <string name="btHacerCalificacion">Calificar</string>

    <string name="etLugar">Lugar</string>
    <string name="etDistancia">Distancia (Km)</string>
    <string name="etCalificacion">Calificación</string>
    <string name="etTiempo">Tiempo recorrido (Min)</string>
    <string name="tvPuntosInteres">Puntos de interés</string>

    <string-array name="Rutas">
        <item>Monserrate</item>
        <item>Guadalupe</item>
        <item>Choachi</item>
        <item>Sibate</item>
        <item>Chia</item>
    </string-array>
    <string name="botonCalificacion">Click en ruta</string>

    <string name="labelCompartir">Compartir Ruta</string>
    <string name="labelIngresar">Ingresar titulo de la ruta</string>
    <string name="labelDescripcion">Descripcion</string>
    <string name="botonCompartir">Compartir</string>
    <string name="botonCancelar">Cancelar</string>

    <string name="labelCrearRuta">Frecuencia en toma de datos</string>
    <string name="botonGuardar">Guardar</string>

    <string name="labelEditarRuta">Marcadores:</string>

    <string name="labelInterestPoint">Arbol de interes</string>


    <string name="cbZonaDescanso">Zona de descanso</string>
    <string name="cbZonaCompleja">Zona compleja</string>
    <string name="cbHidratacion">Hidratación</string>
    <string name="cbMirador">Mirador</string>
    <string name="btBuscarRutas">Buscar Rutas</string>

    <string name="btAnadirImagen">Imagen</string>
    <string name="btComentar">Comentar</string>
    <string name="menuCerrarSesion">Cerrar sesión</string>
    <string name="textoEstrellas">¿Te gustó esta ruta?</string>
    <string name="title_activity_mapa_crear_ruta">Map</string>
    <string name="nombre">Nombre…</string>
    <string name="btnAceptarNombreMapa">Confirmar</string>
    <string name="duracionRuta">Duración formato HH:MM</string>
    <string name="calificacionRuta">Calificación 1-5</string>
    <string name="txtVNacionalidad">Nacionalidad:</string>
    <string name="title_activity_pre_visualizar_ruta">Map</string>
    <string name="btnEmpezarRecorrido">Empezar recorrido</string>
    <string name="etEscribeCalificacion">Escribe sobre la calificación</string>
    <string name="etComentario">¿Cúal fue el problema?</string>
    <string name="edtNickName">Nickname</string>
    <string name="historial_de_rutas">Historial de Rutas</string>
    <string name="title_activity_edicion_final_ruta">Map</string>
    <string name="menuBorrarUsuario">Eliminar usuario</string>

</resources>
