<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    tools:context=".BuscarRutas">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/etLugar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:ems="10"
                android:hint="@string/etLugar"
                android:inputType="text" />

            <EditText
                android:id="@+id/etDistancia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="15dp"
                android:ems="10"
                android:hint="@string/etDistancia"
                android:inputType="number" />

            <EditText
                android:id="@+id/etCalificacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="15dp"
                android:ems="10"
                android:hint="@string/etCalificacion"
                android:inputType="number" />

            <EditText
                android:id="@+id/etTiempo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="15dp"
                android:ems="10"
                android:hint="@string/etTiempo"
                android:inputType="number" />

            <TextView
                android:id="@+id/tvPuntosInteres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:text="@string/tvPuntosInteres"
                android:textSize="15sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/cbZonaDescanso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/cbZonaDescanso" />

            <CheckBox
                android:id="@+id/cbZonaCompleja"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/cbZonaCompleja" />

            <CheckBox
                android:id="@+id/cbHidratacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/cbHidratacion" />

            <CheckBox
                android:id="@+id/cbMirador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/cbMirador" />

            <Button
                android:id="@+id/btBuscarRutas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:onClick="clickBuscarRutas"
                android:text="@string/btBuscarRutas" />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>