<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/popUpMarcadores"
    android:orientation="vertical"
    android:layout_width="320dp"
    android:layout_height="575dp"
    android:background="@color/colorSecondary"
    android:padding="5dp"
    android:layout_gravity="center">


    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/popUpTitulo"
        android:textColor="@color/blanco"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="10dp"/>

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/imageView13"
        android:src="@drawable/icons8_trekking_48px" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/blanco"
        android:gravity="center"
        android:text="@string/expIconoCaminante" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="match_parent"
        android:layout_height="55sp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toEndOf="@+id/imageView13"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:src="@drawable/water" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/blanco"
        android:gravity="center"
        android:text="@string/expIconoAgua" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toEndOf="@+id/imageView12"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:src="@drawable/icons8_picture_500px_1" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/blanco"
        android:gravity="center"
        android:text="@string/expIconoFoto" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:src="@drawable/icons8_charged_battery_128px_1" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/blanco"
        android:gravity="center"
        android:text="@string/expIconoBateria" />

    <ImageButton
        android:id="@+id/imgBTomarFoto3"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toEndOf="@+id/imageView14"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:src="@android:drawable/ic_menu_camera" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/blanco"
        android:gravity="center"
        android:text="@string/expIconoCamara" />

</LinearLayout>