<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityCompartirRuta">

    <TextView
        android:id="@+id/idTextCompartir"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:text="@string/labelCompartir"
        android:gravity="center"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/idIngresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/labelIngresar"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idTextCompartir" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="362dp"
        android:layout_height="44dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/borde_redondo"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idIngresar" />

    <TextView
        android:id="@+id/idDescripion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/labelDescripcion"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <EditText
        android:id="@+id/idTextDescripcion"
        android:layout_width="358dp"
        android:layout_height="304dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/borde_redondo"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idDescripion" />

    <Button
        android:id="@+id/idBotonCompartir"
        android:layout_width="148dp"
        android:layout_height="42dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="32dp"
        android:text="@string/botonCompartir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idTextDescripcion" />

    <Button
        android:id="@+id/idBotonCancelar"
        android:layout_width="148dp"
        android:layout_height="42dp"
        android:layout_marginTop="32dp"
        android:text="@string/botonCancelar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.431"
        app:layout_constraintStart_toEndOf="@+id/idBotonCompartir"
        app:layout_constraintTop_toBottomOf="@+id/idTextDescripcion" />
</androidx.constraintlayout.widget.ConstraintLayout>