<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/popUpInfoFinRuta"
    android:orientation="vertical"
    android:layout_width="320dp"
    android:layout_height="525dp"
    android:background="@color/colorSecondary"
    android:padding="10dp"
    android:layout_gravity="center">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/popUpInfoFinalTitulo"
        android:textColor="@color/blanco"
        android:textSize="25sp"
        android:textStyle="bold|italic" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="60dp"
        android:layout_height="65dp"
        android:layout_marginHorizontal="100dp"
        android:layout_marginStart="125dp"
        android:src="@drawable/m_pin_bandera"
        android:layout_marginVertical="10dp"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/imageView13" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/popUpInfoFinalTitulo2"
        android:textColor="@color/blanco"
        android:layout_marginVertical="10dp"
        android:textSize="20sp"/>

    <LinearLayout
        android:id="@+id/list"
        android:orientation="horizontal"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:background="@color/colorSecondary"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="50dp"
            android:layout_height="55dp"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="@+id/imageView13"
            android:src="@drawable/star1" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="50dp"
            android:layout_height="55dp"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="@+id/imageView13"
            android:src="@drawable/star2" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="50dp"
            android:layout_height="55dp"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="@+id/imageView13"
            android:src="@drawable/star3" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="50dp"
            android:layout_height="55dp"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="@+id/imageView13"
            android:src="@drawable/stars" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="50dp"
            android:layout_height="55dp"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="@+id/imageView13"
            android:src="@drawable/star5" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/popUpInfoFinalTitulo3"
        android:textColor="@color/blanco"
        android:textSize="20sp"/>

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="65dp"
        android:layout_height="70dp"
        android:layout_marginVertical="10dp"
        android:layout_marginStart="122dp"
        android:src="@drawable/comment"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/imageView13" />

    <Button
        android:id="@+id/btnHistorial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="pasarHistorial"
        android:text="@string/historial_de_rutas" />
</LinearLayout>